# AI-Agents

3_crew/coder/output/: code_and_output.txt
3_crew/coder/src/coder/: crew.py  main.py
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/my_coder/src/my_coder/: crew.py  main.py
3_crew/stock/: README.md  pyproject.toml
3_crew/stock/src/stock/: crew.py  main.py
3_crew/stock/src/stock/config/: agents.yaml
3_crew/weatherai/: README.md  pyproject.toml
3_crew/weatherai/output/: report.md
3_crew/weatherai/src/weatherai/: crew.py  main.py
3_crew/weatherai/src/weatherai/config/: agents.yaml  tasks.yaml
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb
