[project]
name = "weatherai"
version = "0.1.0"
description = "weatherai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
weatherai = "weatherai.main:run"
run_crew = "weatherai.main:run"
train = "weatherai.main:train"
replay = "weatherai.main:replay"
test = "weatherai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
